:sparkles: added the list header input translations

--- a/apps/conv-learning-manager/src/assets/i18n/en.json
+++ b/apps/conv-learning-manager/src/assets/i18n/en.json
@@ -169,6 +169,7 @@
         "WEBHOOK": "Url Input",
         "EVENT-NAME": "Event Name",
         "0PTIONAL-PAYLOAD": "Optional - Payload",
+        "LIST": "Header",
         "CONDITIONAL-BLOCK": {
           "INPUT-VARIABLE": "Type Variable",
           "SELECT-VARIABLE": "Select Variable"
