--- a/apps/conv-learning-manager/src/assets/i18n/fr.json
+++ b/apps/conv-learning-manager/src/assets/i18n/fr.json
@@ -107,6 +107,7 @@
         "LOCATION-INPUT": "saisie de position",
         "EVENT-NAME": "Nom de l'événement",
         "0PTIONAL-PAYLOAD": "Facultatif - Charge utile",
+        "LIST": "Entête",
         "CONDITIONAL-BLOCK": {
           "INPUT-VARIABLE": "Variable de type",
           "SELECT-VARIABLE": "Sélectionnez Variable"
